fix(components): Allow bottom vertical alignment for section content

--- a/components/section/style.css
+++ b/components/section/style.css
@@ -59,7 +59,7 @@ section {
     ".         primary   primary   .        "
     "secondary secondary secondary secondary"
     "secondary secondary secondary secondary";
-  align-items: center;
+  align-items: var(--tcds-section-vertical-align, center);
   z-index: 1;
   position: relative;
 
